Finish test routes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
+  <h1>Heading primary</h1>
+  <h2>Heading secondary</h2>
     <%= yield %>
+    <p>Paragraph</p>
   </body>
 </html>
